--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Cuprum:400,700&amp;subset=cyrillic" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.min.css">
 </head>
 <body>
 	<header class="index-header">
@@ -98,8 +98,8 @@
 						<p>Соседям на радость</p>
 						<a href="catalog.html" class="btn">Открыть каталог</a>
 					</section>
-					<a class="prev-slide" onclick="plusSlides(-1)">&#10094</a>
-					<a class="prev-slide" onclick="plusSlides(1)">&#10095</a>
+					<a class="prev-slide" onclick="plusSlides(-1)">Предыдущий</a>
+					<a class="prev-slide" onclick="plusSlides(1)">Следующий</a>
 				</div>
 				
 				<div class="main-menu-offers">
@@ -270,7 +270,7 @@
 						<a href="#">Новости</a>
 					</li>
 					<li>
-						<a href="#">Каталог</a>
+						<a href="catalog.html">Каталог</a>
 					</li>
 					<li>
 						<a href="#">Доставка</a>
@@ -357,6 +357,6 @@
       	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3997.207278097545!2d30.31778861755682!3d59.938718940935146!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1496371476529" width="940" height="445" style="border:0" allowfullscreen></iframe>
       </div>
     </div>
-	<script src="js/script.js"></script>
+	<script src="js/script.min.js"></script>
 </body>
 </html>
